# ddd-archaeology

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/rules/: ddd-archaeology.md
.claude/skills/: gap-analysis.md  infer-boundaries.md  interpret-findings.md  run-archaeology.md
docs/: chain-of-thought.md  exhibit-a-qa-draft.md  exhibit-b-chain-of-thought.md  exhibit-b-qa-draft.md  exhibit-c-chain-of-thought.md  exhibit-c-qa-draft.md  exhibit-d-chain-of-thought.md  exhibit-d-qa-draft.md  exhibit-e-chain-of-thought.md  exhibit-f-chain-of-thought.md  exhibit-g-chain-of-thought.md  exhibit-h-chain-of-thought.md  forensic-ddd-checklist.md
examples/delivery/: carrier-events.asyncapi.yaml  carrier-service.openapi.yaml  consignee-service.openapi.yaml  inventory-service.openapi.yaml  invoicing-service.openapi.yaml  shipment-events.asyncapi.yaml  shipment-service.openapi.yaml  tracking-notifications.openapi.yaml  tracking-portal.graphql
examples/ecommerce/: billing-service.openapi.yaml  customer-service.openapi.yaml  inventory-service.openapi.yaml  notification-service.openapi.yaml  order-events.asyncapi.yaml  order-service.openapi.yaml  shipping-events.asyncapi.yaml  shipping-service.openapi.yaml  storefront.graphql
src/ddd_archaeology/: __init__.py  __main__.py  (+1 more)
tests/: test_change_velocity.py  test_collect.py  test_compare.py  test_coupling.py  test_data_lineage.py  test_discover_entities.py  test_error_codes.py  test_extract_vocab.py  test_incident_clustering.py  test_log_mining.py  test_schema_archaeology.py  test_transaction_boundaries.py
(+26 files in other folders)
